--- a/CertificateStudy/.gitignore
+++ b/CertificateStudy/.gitignore
@@ -1,5 +1,6 @@
 HELP.md
 target/
+target/*
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -14,7 +15,9 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+idea/*
 .idea
+.idea/*
 *.iws
 *.iml
 *.ipr
